# ah_scraper

./: Cargo.toml
migrations/2024-03-16-171937_create_auctions/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
src/hypixel_api/: auction.rs  item.rs  mod.rs  page.rs
