[package]
name = "AHScraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.188"
futures = "0.3.28"
tokio = {version = "1.32.0", features = ["full"]}
fastnbt = "2.4.4"
reqwest = { version = "0.11.23", features = ["json"] }
base64 = "0.21.5"
flate2 = "1.0.28"
env_logger = "0.9.0"
serde_json = "1.0.111"
dotenv = "0.15.0"
time = "0.3.31"
[dependencies.mongodb]
version = "2.8.0"
features = ["tokio-runtime"]
