[package]
name = "AHScraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.0", features = ["64-column-tables", "chrono"] }
diesel-async = { version = "0.4.1", features = ["postgres", "bb8"] }
dotenvy = "0.15"
serde = "1.0.188"
futures = "0.3.28"
tokio = {version = "1.32.0", features = ["full"]}
fastnbt = "2.4.4"
reqwest = { version = "0.11.23", features = ["json"] }
base64 = "0.21.5"
flate2 = "1.0.28"
env_logger = "0.9.0"
serde_json = "1.0.111"
time = "0.3.31"
chrono = { version = "0.4.35", features = ["serde"] }
serde_with = "3.7.0"
